# open-rando

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  index.html  robots.txt  sitemap-0.xml  sitemap-index.xml
_astro/: ElevationChart.astro_astro_type_script_index_0_lang.BM6kMxQV.js  SearchableSelect.astro_astro_type_script_index_0_lang.CVAYfcS0.js  _slug_.astro_astro_type_script_index_0_lang.r-H4Zztq.js  _slug_.astro_astro_type_script_index_1_lang.BVp564Pk.js  _slug_.astro_astro_type_script_index_1_lang.CWHy3AuM.js  _slug_.astro_astro_type_script_index_1_lang.Dxpax4YT.js  _slug_.astro_astro_type_script_index_1_lang.sNsHDfu3.js  about.BteBwx7M.css  about.DX_s7tv_.css  elevation.1SVhAnCu.js  index.astro_astro_type_script_index_0_lang.Cy6G7W-o.js  index.astro_astro_type_script_index_0_lang.DBw_ZzQq.js  index.astro_astro_type_script_index_0_lang.DvB2BxHT.js  index.astro_astro_type_script_index_0_lang.k53tdcid.js  map.CBi-6vbH.js  map.Dqff5Hvm.js  qrcode.Bx7rTVL3.js
about/: index.html
app/: index.html
data/: france-boundary.geojson  france-mask.geojson  grid.json
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEPLOYMENT.md  MOBILE_OFFLINE.md  ROADMAP.md  VECTOR_TILES.md
pipeline/: pyproject.toml  routes.yaml
pipeline/src/open_rando/: __main__.py  cli.py  config.py  models.py
pipeline/src/open_rando/commands/: images.py
pipeline/src/open_rando/data/: gr-descriptions.yaml
pipeline/src/open_rando/exporters/: catalog.py  elevation.py  geojson.py  gpx.py  image_generator.py
pipeline/src/open_rando/fetchers/: accommodation.py  descriptions.py  discovery.py  gtfs.py  landmarks.py  overpass.py  pois.py  routing.py  sncf.py  srtm.py  stations.py
pipeline/src/open_rando/processors/: connectors.py  elevation.py  geography.py  match.py  slice.py
pipeline/tests/: test_bus_stops.py  test_connectors.py  test_constrained_paths.py  test_descriptions.py  test_geography.py  test_nearest_station_filtering.py  test_round_trip.py  test_sncf.py
(+2140 files in other folders)
