[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-rando"
version = "0.1.0"
description = "Train station-to-station hiking on French GR paths"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "shapely>=2.0",
    "geojson>=3.1",
    "gpxpy>=1.6",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "types-requests",
    "types-PyYAML",
]
images = [
    "diffusers>=0.32",
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.45",
    "accelerate>=1.0",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "pillow>=10.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["shapely.*", "gpxpy.*", "PIL.*", "torch.*", "diffusers.*", "ruamel.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
]
